envoyproxy-lb/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config:
                name: all
                virtual_hosts:
                  - name: my_backend
                    domains:
                      - '*'
                    routes:
                      - match: 
                          prefix: "/"
                          headers:
                            - name: "ab-variation"
                              exact_match: "service1private"
                        route:
                          cluster: service1private
                      - match:
                          prefix: "/"
                        route:
                          weighted_clusters:
                            clusters:
                              - name: service1a
                                weight: 10
                              - name: service1b
                                weight: 90
                      
              http_filters:
                - name: envoy.filters.http.router
  clusters:
    - name: service1a
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service1a
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: server1
                    port_value: 8081

    - name: service1b
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service1b
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: server2
                    port_value: 8082

    - name: service1private
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service1private
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: server3
                    port_value: 8083
